force-app/main/default/objects/Case/fields/demoRecommendations__c.field-meta.xml
<CustomField>
    <fullName>demoRecommendations__c</fullName>
    <label>demoRecommendations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>