force-app/main/default/objects/Case/fields/Discovery_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Explanation__c</fullName>
    <label>Discovery Explanation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>