force-app/main/default/objects/Case/fields/Discovery_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Outcome__c</fullName>
    <label>Discovery Outcome</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>