force-app/main/default/objects/Case/fields/Discovery_Prescription__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Prescription__c</fullName>
    <label>Discovery Prescription</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>