force-app/main/default/objects/Case/fields/Personel_Action_Requested_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Personel_Action_Requested_Effective_Date__c</fullName>
    <label>Personel Action Requested Effective Date</label>
    <type>Date</type>
</CustomField>