force-app/main/default/objects/Case/fields/Personnel_Action_Number__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Action_Number__c</fullName>
    <displayFormat>PA-{YY}{MMDD}{0}</displayFormat>
    <label>Personnel Action Number</label>
    <type>AutoNumber</type>
</CustomField>