force-app/main/default/objects/Case/fields/Recommended_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Objectives__c</fullName>
    <label>Recommended Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>