force-app/main/default/objects/Case/fields/Requested_Product__c.field-meta.xml
<CustomField>
    <fullName>Requested_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>