force-app/main/default/objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Graffiti</fullName>
                <label>Damage</label>
            </value>
            <value>
                <fullName>Loose Dog</fullName>
                <label>Faded Paint</label>
            </value>
            <value>
                <fullName>Trash In Yard</fullName>
                <label>Illegal Painting</label>
            </value>
            <value>
                <fullName>Personnel Action</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Individual Assistance Grant</fullName>
            </value>
            <value>
                <fullName>Integrated Eligibility</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
                <isActive>false</isActive>
                <label>Appointment</label>
            </value>
            <value>
                <fullName>Services</fullName>
                <isActive>false</isActive>
                <label>Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>