force-app/main/default/objects/Case/fields/Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_URL__c</fullName>
    <description>Survey URL to customer satisfaction Survey.  Populated by process builder (process not enabled by default).</description>
    <label>Survey URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>