force-app/main/default/objects/Case/recordTypes/Social_Customer_Service.recordType-meta.xml
<RecordType>
    <fullName>Social_Customer_Service</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <description>Social Customer Service</description>
    <label>Social Customer Service</label>
</RecordType>