force-app/main/default/objects/Case/recordTypes/wkdw__IT.recordType-meta.xml
<RecordType>
    <fullName>wkdw__IT</fullName>
    <active>true</active>
    <businessProcess>wkdw__IT Process</businessProcess>
    <description>Tickets related to the operation of your company&apos;s technology environment. Use this record type to fix issues and resolve user requests related to technology, such as equipment problems, access requests, or application performance.</description>
    <label>IT</label>
</RecordType>