force-app/main/default/objects/Case/listViews/All_Cases_for_Community_Collection.listView-meta.xml
<ListView>
    <fullName>All_Cases_for_Community_Collection</fullName>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.STATUS</columns>
    <columns>Case_Type_Image_URL__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Community_Contact_Match__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Cases - Community CMS Collection</label>
</ListView>