force-app/main/default/objects/Case/listViews/Concierge_Bot_Channel_Case.listView-meta.xml
<ListView>
    <fullName>Concierge_Bot_Channel_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Concierge Bot Channel</label>
    <queue>Concierge_Bot_Channel</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>