force-app/main/default/objects/Case/listViews/gps_Case_Omni_Channel_Routing_Case.listView-meta.xml
<ListView>
    <fullName>gps_Case_Omni_Channel_Routing_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>GPS Case Omni-Channel Routing</label>
    <queue>gps_Case_Omni_Channel_Routing</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>