force-app/main/default/objects/Case/listViews/My_Community_Cases.listView-meta.xml
<ListView>
    <fullName>My_Community_Cases</fullName>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.TYPE</columns>
    <columns>Sub_Type__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Community_Contact_Match__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Community Cases</label>
</ListView>